# creampie

./: .cursorrules  .gitattributes  .gitignore  .mdc  .pre-commit-config.yaml  .swentrc.toml  FEATURE_TEMPLATE.md  Python Style Guide.md  STOCK_TRACKING_REQUEST_PLAN.md  cream.md  dev.md  package.json  pyproject.toml  pytest.ini  readme.md  seleniumbase_config.py
.cursor/: workspace.json
ai/: Python Style Guide.md  README.json  README.md  React Style Guide.md  ai_config.json  ai_quick_reference.json  ai_rules.json  ai_usage_guide.json  readme.json  search_index.json
ai/features/: README.json  README.md  readme.json
ai/guide_docs/: AI Tool Optimization Guide.json  Code Review Patterns.json  Code Review Patterns.md  Core Principles.json  Core Principles.md  FastAPI Development Guide.md  Feature Template.json  Feature Template.md  Python Style Guide.md  Python Testing Guide.md  README.json  README.md  ai_tool_optimization_guide.json  code_review_patterns.json  core_principles.json  feature_template.json  implementation_guide_template.json  pattern_inheritance_template.json  readme.json
ai/outputs/: conversion_report.json
ai/project_context/: Architecture Overview.json  Architecture Overview.md  Common Patterns.json  Common Patterns.md  Development Workflow.json  Development Workflow.md  README.json  README.md  architecture_overview.json  common_patterns.json  development_workflow.json  readme.json
ai/scripts/: health_check.py  update_documentation.py  validate_paths.py
ai/tasks/: 01_user onboarding.md  03_rate_limiting.md  04_stock_historical_data.md  05_testing_framework.md  07_logging_implementation.md  parser_technical_summary.md
ai/technical_summaries/: stock_data_module_summary.md
ai_tasks/: Python Style Guide.md
cream_api/: alembic.ini  common.py  db.py  main.py  settings.py
cream_api/background_tasks/: __init__.py  stock_updates.py
cream_api/common/: __init__.py  constants.py  exceptions.py  http.py  rate_limiter.py
cream_api/migrations/: env.py
cream_api/stock_data/: __init__.py  api.py  config.py  constants.py  data_manager.py  exceptions.py  loader.py  models.py  parser.py  processor.py  retriever.py  schemas.py  services.py  tasks.py
cream_api/tests/: conftest.py  test_auth.py  test_main.py
cream_api/users/: __init__.py
cream_ui/: .prettierrc  eslint.config.js  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts  vitest.config.ts
cream_ui/src/: App.tsx  index.css  main.tsx  test-setup.ts
docs/: lessons_learned.md
docs/guides/: Backend Style Guide.md  Test Directory Management.md
humans/: README.md
humans/guides/: ai_workflows_guide.md  database_debugging_guide.md  database_style_guide.md  python_style_guide.md  python_testing_style_guide.md  react_style_guide.md  shell_style_guide.md
humans/observations/: production_deployment_guide.md  production_readiness_analysis.md  production_readiness_analysis_verification.md
humans/plans/: jwt_authentication_implementation_plan.md  stock_tracking_implementation_guide.md  stock_tracking_request_plan.md
humans/tasks/: README.md
scripts/: ai_health_check.py  ai_output_helper.py  common.sh  dynamic_integration.py  fix_migration_state.sh  grant_table_permissions.sh  install_pre_commit_hook.py  kill_servers.sh  lint.sh  migrate.sh  output_helper.py  pre-commit-hook.py  pyupdate.sh  retrieve_stock_data.py  rollback_migration.sh  run_integration_tests.sh  run_pytest.py  run_pytest.sh  run_react_tests.sh  run_tests.sh  update.sh
scripts/db/: fix_migration_state.sh  grant_table_permissions.sh  migrate.sh  populate_test_data.py  (+1 more)
tests/: conftest.py
(+119 files in other folders)
